oem-config (0.9) UNRELEASED; urgency=low

  * Quieten output from deluser.
  * Quieten output from debconf-communicate while resetting passwd/user-uid.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 11 Oct 2005 12:05:34 +0100

oem-config (0.8) breezy; urgency=low

  * Remove the temporary OEM configuration user before running oem-config.
  * Reset passwd/user-uid before running oem-config, so that the new user is
    created at uid 1000 rather than 29999.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  3 Oct 2005 13:04:42 +0100

oem-config (0.7) breezy; urgency=low

  * Use an init script and temporary rc.d links to launch
    oem-config-firstboot on the first boot after installation, rather than a
    temporary inittab. The latter approach caused base-config to be
    respawned after exiting.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 21 Sep 2005 12:53:13 +0100

oem-config (0.6) breezy; urgency=low

  * Set passwd and timezone window gravity to center.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 14 Sep 2005 13:35:58 +0100

oem-config (0.5) breezy; urgency=low

  * Unset LANGUAGE while running steps; it overrides LANG and thereby causes
    much confusion.
  * Policy version 3.6.2. No changes required.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue,  9 Aug 2005 16:48:08 +0100

oem-config (0.4) breezy; urgency=low

  * Emit a debug message when changing LANG.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue,  9 Aug 2005 16:31:07 +0100

oem-config (0.3) breezy; urgency=low

  * Actually install /usr/sbin/oem-config-firstboot.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  3 Aug 2005 20:18:53 +0100

oem-config (0.2) breezy; urgency=low

  * Update GPL notices with the FSF's new address.
  * Add description for base-config menu entry.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  3 Aug 2005 11:59:44 +0100

oem-config (0.1) breezy; urgency=low

  * Initial release.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 29 Jul 2005 17:24:44 +0100