@@ -2,6 +2,8 @@ oem-config (0.9) UNRELEASED; urgency=low
 
   * Quieten output from deluser.
   * Quieten output from debconf-communicate while resetting passwd/user-uid.
+  * Try setting LANG to the value of debian-installer/fallbacklocale if the
+    value of debian-installer/locale isn't a valid locale (Ubuntu #17366).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 11 Oct 2005 12:05:34 +0100
 
